Fix slide-switch captions are not aligned centered in FF

--- a/etemplate/templates/default/etemplate2.css
+++ b/etemplate/templates/default/etemplate2.css
@@ -1685,6 +1685,8 @@ span.et2_checkbox_slideSwitch > span.slideSwitch_container > span:first-child {
 	width: 50%;
     display: -webkit-inline-box;
     text-align: -webkit-center;
+	text-align: -moz-center;
+	text-align: center;
 	position: absolute;
 	left:0;
 	z-index: 6;
@@ -1701,6 +1703,8 @@ span.et2_checkbox_slideSwitch > span.slideSwitch_container> span:nth-child(2) {
 	width: 50%;
     display: -webkit-inline-box;
     text-align: -webkit-center;
+	text-align: -moz-center;
+	text-align: center;
 	position: absolute;
 	z-index: 6;
 	left:50%;
